[gd_scene load_steps=5 format=3 uid="uid://10716wuilshq"]

[ext_resource type="Script" path="res://Scenes/Enemies/enemy.gd" id="1_j1ner"]

[sub_resource type="Curve" id="Curve_excvr"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.395604), -1.9408, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_vv788"]
curve = SubResource("Curve_excvr")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_v7prg"]
lifetime_randomness = 0.4
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, 2, 0)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(1, 1, 0)
spread = 180.0
initial_velocity_min = 15.0
initial_velocity_max = 20.0
gravity = Vector3(0, -14, 0)
damping_min = 8.0
damping_max = 15.0
scale_min = 1.5
scale_max = 3.5
color = Color(0.772549, 0.862745, 0.388235, 0.807843)
alpha_curve = SubResource("CurveTexture_vv788")

[node name="Enemy" type="PathFollow2D" groups=["Enemies"]]
rotates = false
loop = false
script = ExtResource("1_j1ner")

[node name="Image" type="Sprite2D" parent="."]
hframes = 4
vframes = 4

[node name="Particles" type="GPUParticles2D" parent="."]
emitting = false
amount = 80
process_material = SubResource("ParticleProcessMaterial_v7prg")
lifetime = 1.2
one_shot = true
speed_scale = 1.5
explosiveness = 0.55

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]

[node name="Timers" type="Node" parent="."]

[node name="AttackCooldown" type="Timer" parent="Timers"]
wait_time = 0.01
one_shot = true

[node name="ShaderCooldown" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="Audios" type="Node" parent="."]

[connection signal="timeout" from="Timers/AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
